Bloomberg/Emulator/blpapi3_32/headers/blpapi_element.h

BLPAPI_EXPORT const char*
blpapi_Element_nameString(const blpapi_Element_t *element);
BLPAPI_EXPORT int blpapi_Element_datatype (
        const blpapi_Element_t* element);
BLPAPI_EXPORT int blpapi_Element_isComplexType(
        const blpapi_Element_t* element);
BLPAPI_EXPORT int blpapi_Element_isArray(
        const blpapi_Element_t* element);
BLPAPI_EXPORT size_t blpapi_Element_numValues(
        const blpapi_Element_t* element);
BLPAPI_EXPORT size_t blpapi_Element_numElements(
        const blpapi_Element_t* element);
//BLPAPI_EXPORT int blpapi_Element_print(
//        const blpapi_Element_t* element,
//        blpapi_StreamWriter_t streamWriter,
//        void *stream,
//        int level,
//        int spacesPerLevel);

BLPAPI_EXPORT
int blpapi_Element_getElementAt(
        const blpapi_Element_t* element,
        blpapi_Element_t **result,
        size_t position);
BLPAPI_EXPORT
int blpapi_Element_getValueAsBool(
        const blpapi_Element_t *element,
        blpapi_Bool_t *buffer,
        size_t index);
BLPAPI_EXPORT
int blpapi_Element_getValueAsChar(
        const blpapi_Element_t *element,
        blpapi_Char_t *buffer,
        size_t index);
BLPAPI_EXPORT
int blpapi_Element_getValueAsInt32(
        const blpapi_Element_t *element,
        blpapi_Int32_t *buffer,
        size_t index);
BLPAPI_EXPORT
int blpapi_Element_getValueAsInt64(
        const blpapi_Element_t *element,
        blpapi_Int64_t *buffer,
        size_t index);
BLPAPI_EXPORT
int blpapi_Element_getValueAsFloat32(
        const blpapi_Element_t *element,
        blpapi_Float32_t *buffer,
        size_t index);
BLPAPI_EXPORT
int blpapi_Element_getValueAsFloat64(
        const blpapi_Element_t *element,
        blpapi_Float64_t *buffer,
        size_t index);
BLPAPI_EXPORT
int blpapi_Element_getValueAsString(
        const blpapi_Element_t *element,
        const char **buffer,
        size_t index);
BLPAPI_EXPORT
int blpapi_Element_getValueAsDatetime(
        const blpapi_Element_t *element,
        blpapi_Datetime_t *buffer,
        size_t index);
BLPAPI_EXPORT
int blpapi_Element_getValueAsElement(
        const blpapi_Element_t *element,
        blpapi_Element_t **buffer,
        size_t index);
BLPAPI_EXPORT
int blpapi_Element_setElementString(
        blpapi_Element_t *element,
        const char *nameString,
        const blpapi_Name_t* name,
        const char *value);