Bloomberg/Emulator/blpapi3_32/headers/blpapi_session.h

typedef void(*blpapi_EventHandler_t)(Event* event,
                                     blpapi_Session_t* session,
                                     void *userData);
BLPAPI_EXPORT
blpapi_Session_t* blpapi_Session_create(
        blpapi_SessionOptions_t *parameters,
        blpapi_EventHandler_t handler,
        blpapi_EventDispatcher_t* dispatcher,
        void *userData);
BLPAPI_EXPORT
void blpapi_Session_destroy(
        blpapi_Session_t *session);
BLPAPI_EXPORT
int blpapi_Session_start(
        blpapi_Session_t *session);
BLPAPI_EXPORT
int blpapi_Session_stop(
        blpapi_Session_t* session);
BLPAPI_EXPORT
int blpapi_Session_nextEvent(
        blpapi_Session_t* session,
        Event **eventPointer,
        unsigned int timeoutInMilliseconds);
BLPAPI_EXPORT
int blpapi_Session_sendRequest(
        blpapi_Session_t *session,
        const Request *request,
        blpapi_CorrelationId_t *correlationId,
        blpapi_Identity_t *identity,
        blpapi_EventQueue_t *eventQueue,
        const char *requestLabel,
        int requestLabelLen);
BLPAPI_EXPORT
int blpapi_Session_openService(
        blpapi_Session_t *session,
        const char* serviceName);
BLPAPI_EXPORT
int blpapi_Session_getService(
        blpapi_Session_t *session,
		Service **service,
        const char* serviceName);